variables.Variables.scala.code
var stepAmount: Int = 0
while (!isOverBaggle) {
  forward()
  stepAmount = stepAmount+1
}
while(stepAmount!= 0){
  baward()
  stepAmount = stepAmount-1
}